<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SharedAnimationActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:transitionName="imageTransition"
        android:contentDescription="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:id="@+id/imageView"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pexels"
        android:layout_below="@id/imageView"
        android:id="@+id/textView"
        android:transitionName="textTransition"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:textStyle="bold"
        android:fontFamily="@font/american_captain"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_get_amazing_images"
        android:fontFamily="@font/american_captain"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/buttonBack"
        android:textColor="@color/white"
        android:textSize="22sp"/>

</RelativeLayout>