<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity4"
    android:background="@color/back">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:fontFamily="@font/josefinsans_bold"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="280dp"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/app_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textAlignment="center"
        android:fontFamily="@font/josefinsans_regular"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:padding="10dp"
        android:layout_below="@id/app_title"/>

    <ImageView
        android:id="@+id/image1"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:src="@drawable/ui_part1"
        android:layout_marginTop="-18dp"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:id="@+id/image2"
        android:layout_width="250dp"
        android:layout_height="320dp"
        android:src="@drawable/ui_part3"
        android:layout_marginTop="-35dp"
        android:layout_alignParentEnd="true"
        android:rotation="180"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:id="@+id/image3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ui_part_strip"
        android:layout_marginTop="100dp"
        android:layout_marginStart="32dp"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:id="@+id/image4"
        android:layout_width="250dp"
        android:layout_height="320dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-35dp"
        android:src="@drawable/ui_part3"
        android:contentDescription="@string/app_name"/>

    <ImageView

        android:id="@+id/image5"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:src="@drawable/ui_part1"
        android:rotation="180"
        android:layout_marginBottom="-20dp"
        android:contentDescription="@string/app_name"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"/>

    <ImageView

        android:id="@+id/image6"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ui_part_strip"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="32dp"
        android:contentDescription="@string/app_name"/>

</RelativeLayout>