<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/motion_scene_splash"
    tools:context=".MainActivity2">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/image_logo"
        android:src="@drawable/sun_middle"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerInside"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:id="@+id/image_logo_rays"
        android:src="@drawable/sun_ray"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerInside"
        android:contentDescription="@string/app_name"/>


    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/cloud"
        android:id="@+id/cloud_left"
        app:tint="@color/lightGray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationX="-20dp"
        android:contentDescription="@string/app_name"/>

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/cloud"
        android:id="@+id/cloud_right"
        app:tint="@color/lightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:translationX="20dp"
        android:layout_marginTop="120dp"
        android:contentDescription="@string/app_name"/>

    <LinearLayout
        android:alpha="1"
        android:id="@+id/layoutLinear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloud_right"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="20sp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/sign_in_to_continue"
            android:textSize="18sp"
            android:layout_marginTop="10dp"/>

        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="Sign In"
            android:layout_marginTop="250dp"
            />
    </LinearLayout>

</androidx.constraintlayout.motion.widget.MotionLayout>